ASoC: fsl_sai: fix bit order for DSD format (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1437,6 +1437,7 @@
 	patches.kernel.org/6.17.8-049-crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.kernel.org/6.17.8-050-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-oc.patch
 	patches.kernel.org/6.17.8-051-ASoC-Intel-avs-Disable-periods-elapsed-work-wh.patch
+	patches.kernel.org/6.17.8-052-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
