--- a/series.conf
+++ b/series.conf
@@ -1409,6 +1409,7 @@
 	patches.kernel.org/6.17.8-021-mptcp-restore-window-probe.patch
 	patches.kernel.org/6.17.8-022-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.kernel.org/6.17.8-023-ASoC-renesas-rz-ssi-Use-proper-dma_buffer_pos-.patch
+	patches.kernel.org/6.17.8-024-s390-pci-Restore-IRQ-unconditionally-for-the-z.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
