btrfs: ensure no dirty metadata is written back for an fs with errors (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2126,6 +2126,7 @@
 	patches.kernel.org/6.17.8-738-rust-devres-fix-private-intra-doc-link.patch
 	patches.kernel.org/6.17.8-739-rust-kbuild-workaround-rustdoc-doctests-modifi.patch
 	patches.kernel.org/6.17.8-740-rust-kbuild-treat-build_error-and-rustdoc-as-k.patch
+	patches.kernel.org/6.17.8-741-btrfs-ensure-no-dirty-metadata-is-written-back.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
