Revert "Bluetooth: L2CAP: convert timeouts to secs_to_jiffies()" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1386,6 +1386,7 @@
 	patches.kernel.org/6.17.7-034-arch-Add-the-macro-COMPILE_OFFSETS-to-all-the-.patch
 	patches.kernel.org/6.17.7-035-btrfs-tree-checker-fix-bounds-check-in-check_i.patch
 	patches.kernel.org/6.17.7-036-Linux-6.17.7.patch
+	patches.kernel.org/6.17.8-001-Revert-Bluetooth-L2CAP-convert-timeouts-to-sec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
