--- a/series.conf
+++ b/series.conf
@@ -1936,6 +1936,7 @@
 	patches.kernel.org/6.17.8-548-drm-amdgpu-validate-userq-buffer-virtual-addre.patch
 	patches.kernel.org/6.17.8-549-drm-amdgpu-Release-hive-reference-properly.patch
 	patches.kernel.org/6.17.8-550-drm-amd-display-Fix-DMCUB-loading-sequence-for.patch
+	patches.kernel.org/6.17.8-551-drm-amd-display-Set-up-pixel-encoding-for-YCBC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
