drm/amdkfd: Tie UNMAP_LATENCY to queue_preemption (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1759,6 +1759,7 @@
 	patches.kernel.org/6.17.8-371-drm-amdgpu-Correct-the-counts-of-nr_banks-and-.patch
 	patches.kernel.org/6.17.8-372-drm-amdkfd-fix-vram-allocation-failure-for-a-s.patch
 	patches.kernel.org/6.17.8-373-drm-amd-display-Support-HW-cursor-180-rot-for-.patch
+	patches.kernel.org/6.17.8-374-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
