cpuidle: governors: menu: Rearrange main loop in menu_select() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1497,6 +1497,7 @@
 	patches.kernel.org/6.17.8-109-drm-amd-display-Add-HDR-workaround-for-a-speci.patch
 	patches.kernel.org/6.17.8-110-mptcp-leverage-skb-deferral-free.patch
 	patches.kernel.org/6.17.8-111-mptcp-fix-MSG_PEEK-stream-corruption.patch
+	patches.kernel.org/6.17.8-112-cpuidle-governors-menu-Rearrange-main-loop-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
