--- a/series.conf
+++ b/series.conf
@@ -1579,6 +1579,7 @@
 	patches.kernel.org/6.17.8-191-power-supply-qcom_battmgr-handle-charging-stat.patch
 	patches.kernel.org/6.17.8-192-bpftool-Fix-Wuninitialized-const-pointer-warni.patch
 	patches.kernel.org/6.17.8-193-cpuidle-Fail-cpuidle-device-registration-if-th.patch
+	patches.kernel.org/6.17.8-194-futex-Don-t-leak-robust_list-pointer-on-exec-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
