--- a/series.conf
+++ b/series.conf
@@ -2194,6 +2194,7 @@
 	patches.kernel.org/6.17.8-806-fscrypt-fix-left-shift-underflow-when-inode-i_.patch
 	patches.kernel.org/6.17.8-807-drm-sched-Fix-deadlock-in-drm_sched_entity_kil.patch
 	patches.kernel.org/6.17.8-808-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mon.patch
+	patches.kernel.org/6.17.8-809-iommufd-Don-t-overflow-during-division-for-dir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
