PCI: dwc: Verify the single eDMA IRQ in dw_pcie_edma_irq_verify() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1913,6 +1913,7 @@
 	patches.kernel.org/6.17.8-525-HID-asus-add-Z13-folio-to-generic-group-for-mu.patch
 	patches.kernel.org/6.17.8-526-watchdog-s3c2410_wdt-Fix-max_timeout-being-cal.patch
 	patches.kernel.org/6.17.8-527-crypto-sun8i-ce-remove-channel-timeout-field.patch
+	patches.kernel.org/6.17.8-528-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
