Bluetooth: rfcomm: fix modem control handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1400,6 +1400,7 @@
 	patches.kernel.org/6.17.8-012-virtio-net-drop-the-multi-buffer-XDP-packet-in.patch
 	patches.kernel.org/6.17.8-013-batman-adv-Release-references-to-inactive-inte.patch
 	patches.kernel.org/6.17.8-014-fbdev-bitblit-bound-check-glyph-index-in-bit_p.patch
+	patches.kernel.org/6.17.8-015-Bluetooth-rfcomm-fix-modem-control-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
