--- a/series.conf
+++ b/series.conf
@@ -2117,6 +2117,7 @@
 	patches.kernel.org/6.17.8-729-ASoC-rt722-add-settings-for-rt722VB.patch
 	patches.kernel.org/6.17.8-730-drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 	patches.kernel.org/6.17.8-731-drm-amdgpu-Report-individual-reset-error.patch
+	patches.kernel.org/6.17.8-732-ceph-add-checking-of-wait_for_completion_killa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
