--- a/series.conf
+++ b/series.conf
@@ -2021,6 +2021,7 @@
 	patches.kernel.org/6.17.8-633-scsi-libfc-Fix-potential-buffer-overflow-in-fc.patch
 	patches.kernel.org/6.17.8-634-accel-habanalabs-gaudi2-fix-BMON-disable-confi.patch
 	patches.kernel.org/6.17.8-635-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-lin.patch
+	patches.kernel.org/6.17.8-636-accel-habanalabs-return-ENOMEM-if-less-than-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
