ACPI: video: Fix use-after-free in acpi_video_switch_brightness() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1394,6 +1394,7 @@
 	patches.kernel.org/6.17.8-006-net-usb-asix_devices-Check-return-value-of-usb.patch
 	patches.kernel.org/6.17.8-007-fbcon-Set-fb_display-i-mode-to-NULL-when-the-m.patch
 	patches.kernel.org/6.17.8-008-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
+	patches.kernel.org/6.17.8-009-ACPI-video-Fix-use-after-free-in-acpi_video_sw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
