net: ipv4: allow directed broadcast routes to use dst hint (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1736,6 +1736,7 @@
 	patches.kernel.org/6.17.8-348-iio-imu-bmi270-Match-PNP-ID-found-on-newer-GPD.patch
 	patches.kernel.org/6.17.8-349-media-ipu6-isys-Set-embedded-data-type-correct.patch
 	patches.kernel.org/6.17.8-350-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-raw.patch
+	patches.kernel.org/6.17.8-351-net-ipv4-allow-directed-broadcast-routes-to-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
