net: mdio: Check regmap pointer returned by device_node_to_regmap() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2152,6 +2152,7 @@
 	patches.kernel.org/6.17.8-764-netconsole-Acquire-su_mutex-before-navigating-.patch
 	patches.kernel.org/6.17.8-765-gpio-swnode-don-t-use-the-swnode-s-name-as-the.patch
 	patches.kernel.org/6.17.8-766-gpiolib-fix-invalid-pointer-access-in-debugfs.patch
+	patches.kernel.org/6.17.8-767-net-mdio-Check-regmap-pointer-returned-by-devi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
