--- a/series.conf
+++ b/series.conf
@@ -2177,6 +2177,7 @@
 	patches.kernel.org/6.17.8-789-net-ti-icssg-prueth-Fix-fdb-hash-size-configur.patch
 	patches.kernel.org/6.17.8-790-net-mlx5e-SHAMPO-Fix-header-mapping-for-64K-pa.patch
 	patches.kernel.org/6.17.8-791-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-pa.patch
+	patches.kernel.org/6.17.8-792-net-mlx5e-SHAMPO-Fix-header-formulas-for-highe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
