clk: at91: add ACR in all PLL settings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2088,6 +2088,7 @@
 	patches.kernel.org/6.17.8-700-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
 	patches.kernel.org/6.17.8-701-rtc-pcf2127-clear-minute-second-interrupt.patch
 	patches.kernel.org/6.17.8-702-ARM-at91-pm-save-and-restore-ACR-during-PLL-di.patch
+	patches.kernel.org/6.17.8-703-clk-at91-add-ACR-in-all-PLL-settings.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
