tracing: tprobe-events: Fix to put tracepoint_user when disable the tprobe (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2132,6 +2132,7 @@
 	patches.kernel.org/6.17.8-744-drm-mediatek-Disable-AFBC-support-on-Mediatek-.patch
 	patches.kernel.org/6.17.8-745-Revert-wifi-ath10k-avoid-unnecessary-wait-for-.patch
 	patches.kernel.org/6.17.8-746-tracing-tprobe-events-Fix-to-register-tracepoi.patch
+	patches.kernel.org/6.17.8-747-tracing-tprobe-events-Fix-to-put-tracepoint_us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
