--- a/series.conf
+++ b/series.conf
@@ -1472,6 +1472,7 @@
 	patches.kernel.org/6.17.8-084-drm-amdgpu-fix-SPDX-headers-on-amdgpu_cper.c-h.patch
 	patches.kernel.org/6.17.8-085-drm-amdgpu-fix-SPDX-header-on-amd_cper.h.patch
 	patches.kernel.org/6.17.8-086-drm-amdgpu-fix-SPDX-header-on-irqsrcs_vcn_5_0..patch
+	patches.kernel.org/6.17.8-087-ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
