--- a/series.conf
+++ b/series.conf
@@ -1519,6 +1519,7 @@
 	patches.kernel.org/6.17.8-131-firmware-ti_sci-Enable-abort-handling-of-entry.patch
 	patches.kernel.org/6.17.8-132-firewire-ohci-move-self_id_complete-tracepoint.patch
 	patches.kernel.org/6.17.8-133-irqchip-sifive-plic-Respect-mask-state-when-se.patch
+	patches.kernel.org/6.17.8-134-irqchip-loongson-eiointc-Route-interrupt-parse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
