--- a/series.conf
+++ b/series.conf
@@ -1841,6 +1841,7 @@
 	patches.kernel.org/6.17.8-453-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.kernel.org/6.17.8-454-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 	patches.kernel.org/6.17.8-455-drm-amdgpu-add-support-for-cyan-skillfish-gpu_.patch
+	patches.kernel.org/6.17.8-456-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
