drm/amdgpu: Check vcn sram load return value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1619,6 +1619,7 @@
 	patches.kernel.org/6.17.8-231-drm-amd-display-fix-condition-for-setting-timi.patch
 	patches.kernel.org/6.17.8-232-drm-amd-display-ensure-committing-streams-is-s.patch
 	patches.kernel.org/6.17.8-233-drm-amdgpu-add-range-check-for-RAS-bad-page-ad.patch
+	patches.kernel.org/6.17.8-234-drm-amdgpu-Check-vcn-sram-load-return-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
