clk: sunxi-ng: sun6i-rtc: Add A523 specifics (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2085,6 +2085,7 @@
 	patches.kernel.org/6.17.8-697-clocksource-hyper-v-Skip-unnecessary-checks-fo.patch
 	patches.kernel.org/6.17.8-698-hyperv-Add-missing-field-to-hv_output_map_devi.patch
 	patches.kernel.org/6.17.8-699-um-Fix-help-message-for-ssl-non-raw.patch
+	patches.kernel.org/6.17.8-700-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
