--- a/series.conf
+++ b/series.conf
@@ -2198,6 +2198,7 @@
 	patches.kernel.org/6.17.8-810-riscv-Fix-memory-leak-in-module_frob_arch_sect.patch
 	patches.kernel.org/6.17.8-811-parisc-Avoid-crash-due-to-unaligned-access-in-.patch
 	patches.kernel.org/6.17.8-812-rtc-rx8025-fix-incorrect-register-reference.patch
+	patches.kernel.org/6.17.8-813-x86-microcode-AMD-Add-more-known-models-to-ent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
