--- a/series.conf
+++ b/series.conf
@@ -2075,6 +2075,7 @@
 	patches.kernel.org/6.17.8-687-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.kernel.org/6.17.8-688-RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.kernel.org/6.17.8-689-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-arou.patch
+	patches.kernel.org/6.17.8-690-btrfs-fix-memory-leak-of-qgroup_list-in-btrfs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
