--- a/series.conf
+++ b/series.conf
@@ -1598,6 +1598,7 @@
 	patches.kernel.org/6.17.8-210-hwmon-dell-smm-Add-support-for-Dell-OptiPlex-7.patch
 	patches.kernel.org/6.17.8-211-tools-cpupower-Fix-incorrect-size-in-cpuidle_s.patch
 	patches.kernel.org/6.17.8-212-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
+	patches.kernel.org/6.17.8-213-tools-power-turbostat-Fix-incorrect-sorting-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
