--- a/series.conf
+++ b/series.conf
@@ -1524,6 +1524,7 @@
 	patches.kernel.org/6.17.8-136-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-o.patch
 	patches.kernel.org/6.17.8-137-ACPI-video-force-native-for-Lenovo-82K8.patch
 	patches.kernel.org/6.17.8-138-libbpf-Fix-USDT-SIB-argument-handling-causing-.patch
+	patches.kernel.org/6.17.8-139-selftests-bpf-Fix-bpf_prog_detach2-usage-in-te.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
