--- a/series.conf
+++ b/series.conf
@@ -2077,6 +2077,7 @@
 	patches.kernel.org/6.17.8-689-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-arou.patch
 	patches.kernel.org/6.17.8-690-btrfs-fix-memory-leak-of-qgroup_list-in-btrfs_.patch
 	patches.kernel.org/6.17.8-691-btrfs-mark-dirty-extent-range-for-out-of-bound.patch
+	patches.kernel.org/6.17.8-692-clk-qcom-gcc-ipq6018-rework-nss_port5-clock-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
