--- a/series.conf
+++ b/series.conf
@@ -1450,6 +1450,7 @@
 	patches.kernel.org/6.17.8-062-Bluetooth-ISO-Fix-another-instance-of-dst_type.patch
 	patches.kernel.org/6.17.8-063-Bluetooth-btintel_pcie-Fix-event-packet-loss-i.patch
 	patches.kernel.org/6.17.8-064-Bluetooth-hci_conn-Fix-connection-cleanup-with.patch
+	patches.kernel.org/6.17.8-065-Bluetooth-hci_core-Fix-tracking-of-periodic-ad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
