rust: devres: fix private intra-doc link (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2123,6 +2123,7 @@
 	patches.kernel.org/6.17.8-735-ceph-fix-multifs-mds-auth-caps-issue.patch
 	patches.kernel.org/6.17.8-736-x86-uaccess-don-t-use-runtime-const-rewriting-.patch
 	patches.kernel.org/6.17.8-737-rust-condvar-fix-broken-intra-doc-link.patch
+	patches.kernel.org/6.17.8-738-rust-devres-fix-private-intra-doc-link.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
