--- a/series.conf
+++ b/series.conf
@@ -1947,6 +1947,7 @@
 	patches.kernel.org/6.17.8-559-net-phy-clear-EEE-runtime-state-in-PHY_HALTED-.patch
 	patches.kernel.org/6.17.8-560-page_pool-always-add-GFP_NOWARN-for-ATOMIC-all.patch
 	patches.kernel.org/6.17.8-561-ethernet-Extend-device_get_mac_address-to-use-.patch
+	patches.kernel.org/6.17.8-562-scsi-ufs-ufs-qcom-Disable-lane-clocks-during-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
