ASoC: cs-amp-lib-test: Fix missing include of kunit/test-bug.h (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1423,6 +1423,7 @@
 	patches.kernel.org/6.17.8-035-drm-msm-make-sure-last_fence-is-always-updated.patch
 	patches.kernel.org/6.17.8-036-ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.kernel.org/6.17.8-037-wifi-iwlwifi-fix-potential-use-after-free-in-i.patch
+	patches.kernel.org/6.17.8-038-ASoC-cs-amp-lib-test-Fix-missing-include-of-ku.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
