--- a/series.conf
+++ b/series.conf
@@ -1505,6 +1505,7 @@
 	patches.kernel.org/6.17.8-117-usb-gadget-f_fs-Fix-epfile-null-pointer-access.patch
 	patches.kernel.org/6.17.8-118-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.kernel.org/6.17.8-119-firmware-qcom-scm-preserve-assign_mem-error-re.patch
+	patches.kernel.org/6.17.8-120-soc-qcom-smem-Fix-endian-unaware-access-of-num.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
