--- a/series.conf
+++ b/series.conf
@@ -1588,6 +1588,7 @@
 	patches.kernel.org/6.17.8-200-clocksource-drivers-timer-rtl-otto-Work-around.patch
 	patches.kernel.org/6.17.8-201-clocksource-drivers-timer-rtl-otto-Do-not-inte.patch
 	patches.kernel.org/6.17.8-202-blk-cgroup-fix-possible-deadlock-while-configu.patch
+	patches.kernel.org/6.17.8-203-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
