wifi: mac80211: reset FILS discovery and unsol probe resp intervals (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1424,6 +1424,7 @@
 	patches.kernel.org/6.17.8-036-ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.kernel.org/6.17.8-037-wifi-iwlwifi-fix-potential-use-after-free-in-i.patch
 	patches.kernel.org/6.17.8-038-ASoC-cs-amp-lib-test-Fix-missing-include-of-ku.patch
+	patches.kernel.org/6.17.8-039-wifi-mac80211-reset-FILS-discovery-and-unsol-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
