--- a/series.conf
+++ b/series.conf
@@ -1611,6 +1611,7 @@
 	patches.kernel.org/6.17.8-223-mfd-da9063-Split-chip-variant-reading-in-two-b.patch
 	patches.kernel.org/6.17.8-224-mfd-macsmc-Add-apple-t8103-smc-compatible.patch
 	patches.kernel.org/6.17.8-225-mfd-core-Increment-of_node-s-refcount-before-l.patch
+	patches.kernel.org/6.17.8-226-mfd-cs42l43-Move-IRQ-enable-disable-to-encompa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
