--- a/series.conf
+++ b/series.conf
@@ -1427,6 +1427,7 @@
 	patches.kernel.org/6.17.8-039-wifi-mac80211-reset-FILS-discovery-and-unsol-p.patch
 	patches.kernel.org/6.17.8-040-wifi-mac80211-fix-key-tailroom-accounting-leak.patch
 	patches.kernel.org/6.17.8-041-wifi-nl80211-call-kfree-without-a-NULL-check.patch
+	patches.kernel.org/6.17.8-042-kunit-test_dev_action-Correctly-cast-priv-poin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
