x86/fpu: Ensure XFD state on signal delivery (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1413,6 +1413,7 @@
 	patches.kernel.org/6.17.8-025-smb-client-fix-potential-cfid-UAF-in-smb2_quer.patch
 	patches.kernel.org/6.17.8-026-x86-build-Disable-SSE4a.patch
 	patches.kernel.org/6.17.8-027-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
+	patches.kernel.org/6.17.8-028-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
