ASoC: es8323: enable DAPM power widgets for playback DAC and output (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1681,6 +1681,7 @@
 	patches.kernel.org/6.17.8-293-ice-Don-t-use-pK-through-printk-or-tracepoints.patch
 	patches.kernel.org/6.17.8-294-thunderbolt-Use-is_pciehp-instead-of-is_hotplu.patch
 	patches.kernel.org/6.17.8-295-tty-serial-ip22zilog-Use-platform-device-for-p.patch
+	patches.kernel.org/6.17.8-296-ASoC-es8323-enable-DAPM-power-widgets-for-play.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
