--- a/series.conf
+++ b/series.conf
@@ -2062,6 +2062,7 @@
 	patches.kernel.org/6.17.8-674-net-mlx5e-Prevent-entering-switchdev-mode-with.patch
 	patches.kernel.org/6.17.8-675-ksmbd-use-sock_create_kern-interface-to-create.patch
 	patches.kernel.org/6.17.8-676-smb-client-update-cfid-last_access_time-in-ope.patch
+	patches.kernel.org/6.17.8-677-smb-client-transport-avoid-reconnects-triggere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
