--- a/series.conf
+++ b/series.conf
@@ -1578,6 +1578,7 @@
 	patches.kernel.org/6.17.8-190-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 	patches.kernel.org/6.17.8-191-power-supply-qcom_battmgr-handle-charging-stat.patch
 	patches.kernel.org/6.17.8-192-bpftool-Fix-Wuninitialized-const-pointer-warni.patch
+	patches.kernel.org/6.17.8-193-cpuidle-Fail-cpuidle-device-registration-if-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
