net: stmmac: Correctly handle Rx checksum offload errors (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1718,6 +1718,7 @@
 	patches.kernel.org/6.17.8-330-char-misc-Make-misc_register-reentry-for-miscd.patch
 	patches.kernel.org/6.17.8-331-char-misc-Does-not-request-module-for-miscdevi.patch
 	patches.kernel.org/6.17.8-332-net-When-removing-nexthops-don-t-call-synchron.patch
+	patches.kernel.org/6.17.8-333-net-stmmac-Correctly-handle-Rx-checksum-offloa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
