--- a/series.conf
+++ b/series.conf
@@ -2070,6 +2070,7 @@
 	patches.kernel.org/6.17.8-682-RDMA-bnxt_re-Fix-a-potential-memory-leak-in-de.patch
 	patches.kernel.org/6.17.8-683-RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.kernel.org/6.17.8-684-RDMA-irdma-Remove-unused-struct-irdma_cq-field.patch
+	patches.kernel.org/6.17.8-685-RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
