--- a/series.conf
+++ b/series.conf
@@ -1583,6 +1583,7 @@
 	patches.kernel.org/6.17.8-195-selftests-bpf-Fix-selftest-verifier_arena_larg.patch
 	patches.kernel.org/6.17.8-196-selftests-ublk-fix-behavior-when-fio-is-not-in.patch
 	patches.kernel.org/6.17.8-197-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
+	patches.kernel.org/6.17.8-198-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
