--- a/series.conf
+++ b/series.conf
@@ -1514,6 +1514,7 @@
 	patches.kernel.org/6.17.8-126-pinctrl-single-fix-bias-pull-up-down-handling-.patch
 	patches.kernel.org/6.17.8-127-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.kernel.org/6.17.8-128-memstick-Add-timeout-to-prevent-indefinite-wai.patch
+	patches.kernel.org/6.17.8-129-cpufreq-ti-Add-support-for-AM62D2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
