bnxt_en: Add fw log trace support for 5731X/5741X chips (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1973,6 +1973,7 @@
 	patches.kernel.org/6.17.8-585-ipv6-np-rxpmtu-race-annotation.patch
 	patches.kernel.org/6.17.8-586-RDMA-irdma-Update-Kconfig.patch
 	patches.kernel.org/6.17.8-587-IB-ipoib-Ignore-L3-master-device.patch
+	patches.kernel.org/6.17.8-588-bnxt_en-Add-fw-log-trace-support-for-5731X-574.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
