--- a/series.conf
+++ b/series.conf
@@ -1560,6 +1560,7 @@
 	patches.kernel.org/6.17.8-172-firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.kernel.org/6.17.8-173-soc-ti-k3-socinfo-Add-information-for-AM62L-SR.patch
 	patches.kernel.org/6.17.8-174-mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for.patch
+	patches.kernel.org/6.17.8-175-pwm-pca9685-Use-bulk-write-to-atomicially-upda.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
