--- a/series.conf
+++ b/series.conf
@@ -1996,6 +1996,7 @@
 	patches.kernel.org/6.17.8-608-ptp_ocp-make-ptp_ocp-driver-compatible-with-PT.patch
 	patches.kernel.org/6.17.8-609-crypto-hisilicon-qm-invalidate-queues-in-use.patch
 	patches.kernel.org/6.17.8-610-crypto-hisilicon-qm-clear-all-VF-configuration.patch
+	patches.kernel.org/6.17.8-611-ASoC-ops-improve-snd_soc_get_volsw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
