--- a/series.conf
+++ b/series.conf
@@ -2161,6 +2161,7 @@
 	patches.kernel.org/6.17.8-773-sctp-Hold-RCU-read-lock-while-iterating-over-a.patch
 	patches.kernel.org/6.17.8-774-sctp-Prevent-TOCTOU-out-of-bounds-write.patch
 	patches.kernel.org/6.17.8-775-sctp-Hold-sock-lock-while-iterating-over-addre.patch
+	patches.kernel.org/6.17.8-776-net-ionic-add-dma_wmb-before-ringing-TX-doorbe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
