--- a/series.conf
+++ b/series.conf
@@ -1503,6 +1503,7 @@
 	patches.kernel.org/6.17.8-115-PM-sleep-Allow-pm_restrict_gfp_mask-stacking.patch
 	patches.kernel.org/6.17.8-116-mfd-kempld-Switch-back-to-earlier-init-behavio.patch
 	patches.kernel.org/6.17.8-117-usb-gadget-f_fs-Fix-epfile-null-pointer-access.patch
+	patches.kernel.org/6.17.8-118-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
