--- a/series.conf
+++ b/series.conf
@@ -1794,6 +1794,7 @@
 	patches.kernel.org/6.17.8-406-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-d.patch
 	patches.kernel.org/6.17.8-407-media-imx-mipi-csis-Only-set-clock-rate-when-s.patch
 	patches.kernel.org/6.17.8-408-media-nxp-imx8-isi-Fix-streaming-cleanup-on-re.patch
+	patches.kernel.org/6.17.8-409-wifi-iwlwifi-pcie-remember-when-interrupts-are.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
