--- a/series.conf
+++ b/series.conf
@@ -1664,6 +1664,7 @@
 	patches.kernel.org/6.17.8-276-wifi-rtw88-sdio-use-indirect-IO-for-device-reg.patch
 	patches.kernel.org/6.17.8-277-wifi-rtw89-add-dummy-C2H-handlers-for-BCN-rese.patch
 	patches.kernel.org/6.17.8-278-drm-amdkfd-return-ENOTTY-for-unsupported-IOCTL.patch
+	patches.kernel.org/6.17.8-279-selftests-drv-net-devmem-add-correct-the-IPv6-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
