btrfs: ensure no dirty metadata is written back for an fs with errors (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -12932,6 +12932,7 @@
 	patches.suse/x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.suse/regmap-slimbus-fix-bus_context-pointer-in-regmap-ini.patch
 	patches.suse/regulator-bd718x7-Fix-voltages-scaled-by-resistor-di.patch
+	patches.suse/btrfs-ensure-no-dirty-metadata-is-written-back-for-a.patch
 	patches.suse/btrfs-fix-memory-leak-of-qgroup_list-in-btrfs_add_qg.patch
 	patches.suse/btrfs-set-inode-flag-BTRFS_INODE_COPY_EVERYTHING-whe.patch
 	patches.suse/btrfs-mark-dirty-extent-range-for-out-of-bound-preal.patch
