--- a/series.conf
+++ b/series.conf
@@ -35014,6 +35014,7 @@
 	patches.suse/wifi-ath11k-zero-init-info-status-in-wmi_process_mgm.patch
 	patches.suse/wifi-mac80211-skip-rate-verification-for-not-capture.patch
 	patches.suse/wifi-mwl8k-inject-DSSS-Parameter-Set-element-into-be.patch
+	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 
 	########################################################
 	# end of sorted patches
