wifi: mac80211: skip rate verification for not captured PSDUs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35012,6 +35012,7 @@
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
 	patches.suse/wifi-ath11k-zero-init-info-status-in-wmi_process_mgm.patch
+	patches.suse/wifi-mac80211-skip-rate-verification-for-not-capture.patch
 
 	########################################################
 	# end of sorted patches
