--- a/series.conf
+++ b/series.conf
@@ -35009,6 +35009,7 @@
 	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
 	patches.suse/Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DEV-addre.patch
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
+	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 
 	########################################################
 	# end of sorted patches
