Bluetooth: btusb: reorder cleanup in btusb_disconnect to avoid UAF (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35005,6 +35005,7 @@
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 	patches.suse/strparser-Fix-signed-unsigned-mismatch-bug.patch
 	patches.suse/Bluetooth-MGMT-cancel-mesh-send-timer-when-hdev-remo.patch
+	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
 
 	########################################################
 	# end of sorted patches
