wifi: mwl8k: inject DSSS Parameter Set element into beacons if missing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35013,6 +35013,7 @@
 	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
 	patches.suse/wifi-ath11k-zero-init-info-status-in-wmi_process_mgm.patch
 	patches.suse/wifi-mac80211-skip-rate-verification-for-not-capture.patch
+	patches.suse/wifi-mwl8k-inject-DSSS-Parameter-Set-element-into-be.patch
 
 	########################################################
 	# end of sorted patches
