ACPI: CPPC: Limit perf ctrs in PCC check only to online CPUs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35016,6 +35016,7 @@
 	patches.suse/wifi-mwl8k-inject-DSSS-Parameter-Set-element-into-be.patch
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
+	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
 
 	########################################################
 	# end of sorted patches
