wifi: ath11k: zero init info->status in wmi_process_mgmt_tx_comp() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35011,6 +35011,7 @@
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
+	patches.suse/wifi-ath11k-zero-init-info-status-in-wmi_process_mgm.patch
 
 	########################################################
 	# end of sorted patches
