wifi: mac80211: reject address change while connecting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35010,6 +35010,7 @@
 	patches.suse/Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DEV-addre.patch
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
+	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
 
 	########################################################
 	# end of sorted patches
