strparser: Fix signed/unsigned mismatch bug (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35003,6 +35003,7 @@
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
 	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
+	patches.suse/strparser-Fix-signed-unsigned-mismatch-bug.patch
 
 	########################################################
 	# end of sorted patches
