drm/bridge: cdns-dsi: Fix REG_WAKEUP_TIME value (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55868,6 +55868,7 @@
 	patches.suse/drm-nouveau-replace-snprintf-with-scnprintf-in-nvkm_.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-tidss-Use-the-crtc_-timings-when-programming-the.patch
+	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
