drm/amd/amdgpu: Release xcp drm memory after unplug (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55880,6 +55880,7 @@
 	patches.suse/drm-amd-display-Increase-AUX-Intra-Hop-Done-Max-Wait.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
+	patches.suse/drm-amd-amdgpu-Release-xcp-drm-memory-after-unplug.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 	patches.suse/drm-amd-display-fix-dmub-access-race-condition.patch
 	patches.suse/drm-amd-display-more-liberal-vmin-vmax-update-for-fr.patch
