--- a/series.conf
+++ b/series.conf
@@ -55876,6 +55876,7 @@
 	patches.suse/drm-amd-display-fix-condition-for-setting-timing_adj.patch
 	patches.suse/drm-amd-display-ensure-committing-streams-is-seamles.patch
 	patches.suse/drm-amdgpu-add-range-check-for-RAS-bad-page-address.patch
+	patches.suse/drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
