--- a/series.conf
+++ b/series.conf
@@ -55873,6 +55873,7 @@
 	patches.suse/drm-tidss-Set-crtc-modesetting-parameters-with-adjus.patch
 	patches.suse/drm-panthor-Serialize-GPU-cache-flush-operations.patch
 	patches.suse/drm-bridge-display-connector-don-t-set-OP_DETECT-for.patch
+	patches.suse/drm-amd-display-fix-condition-for-setting-timing_adj.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
