--- a/series.conf
+++ b/series.conf
@@ -55897,6 +55897,7 @@
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amdkfd-return-ENOTTY-for-unsupported-IOCTLs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
+	patches.suse/drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
