--- a/series.conf
+++ b/series.conf
@@ -55865,6 +55865,7 @@
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
+	patches.suse/drm-nouveau-replace-snprintf-with-scnprintf-in-nvkm_.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
