--- a/series.conf
+++ b/series.conf
@@ -55891,6 +55891,7 @@
 	patches.suse/drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
 	patches.suse/drm-amd-display-Fix-vupdate_offload_work-doc.patch
 	patches.suse/drm-amd-display-Add-NULL-check-for-stream-before-der.patch
+	patches.suse/drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-poweroff.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
