drm/amdkfd: return -ENOTTY for unsupported IOCTLs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55895,6 +55895,7 @@
 	patches.suse/drm-amd-display-Wait-until-OTG-enable-state-is-clear.patch
 	patches.suse/drm-amd-display-Reset-apply_eamless_boot_optimizatio.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
+	patches.suse/drm-amdkfd-return-ENOTTY-for-unsupported-IOCTLs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
