drm/msm/registers: Generate _HI/LO builders for reg64 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55935,6 +55935,7 @@
 	patches.suse/drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-rate.patch
 	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
+	patches.suse/drm-msm-registers-Generate-_HI-LO-builders-for-reg64.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
