drm/amd: add more cyan skillfish PCI ids (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55920,6 +55920,7 @@
 	patches.suse/drm-amd-pm-Treat-zero-vblank-time-as-too-short-in-si.patch
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
+	patches.suse/drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.suse/drm-amd-amdgpu-Implement-MES-suspend-resume-gang-fun.patch
 	patches.suse/drm-amdgpu-mes-add-front-end-for-detect-and-reset-hu.patch
 	patches.suse/drm-amdgpu-mes11-implement-detect-and-reset-callback.patch
