drm/msm/dsi/phy: Toggle back buffer resync after preparing PLL (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55931,6 +55931,7 @@
 	patches.suse/drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-amd-display-Fix-pbn_div-Calculation-Error.patch
+	patches.suse/drm-msm-dsi-phy-Toggle-back-buffer-resync-after-prep.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
