--- a/series.conf
+++ b/series.conf
@@ -55953,6 +55953,7 @@
 	patches.suse/drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-in-amdgp.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amd-display-Add-AVI-infoframe-copy-in-copy_strea.patch
+	patches.suse/drm-amd-display-Init-dispclk-from-bootup-clock-for-D.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
