--- a/series.conf
+++ b/series.conf
@@ -55991,6 +55991,7 @@
 	patches.suse/wifi-mt76-mt7921-Add-160MHz-beamformee-capability-fo.patch
 	patches.suse/wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
+	patches.suse/wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu_sta_k.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
