--- a/series.conf
+++ b/series.conf
@@ -56003,6 +56003,7 @@
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/wifi-ath10k-avoid-unnecessary-wait-for-service-ready.patch
+	patches.suse/wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
 	patches.suse/dpll-zl3073x-Fix-double-free-in-zl3073x_devlink_flas.patch
 	patches.suse/Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Link-AX9U.patch
