drm/amd/display/dml2: Guard dml21_map_dc_state_into_dml_display_cfg with DC_FP_START (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55946,6 +55946,7 @@
 	patches.suse/drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
+	patches.suse/drm-amd-display-dml2-Guard-dml21_map_dc_state_into_d.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
