--- a/series.conf
+++ b/series.conf
@@ -55956,6 +55956,7 @@
 	patches.suse/drm-amd-display-Init-dispclk-from-bootup-clock-for-D.patch
 	patches.suse/drm-amd-display-Fix-for-test-crash-due-to-power-gati.patch
 	patches.suse/drm-amd-display-update-color-on-atomic-commit-time.patch
+	patches.suse/drm-amd-display-change-dc-stream-color-settings-only.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
