drm/xe/guc: Increase GuC crash dump buffer size (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55936,6 +55936,7 @@
 	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-msm-registers-Generate-_HI-LO-builders-for-reg64.patch
+	patches.suse/drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
