--- a/series.conf
+++ b/series.conf
@@ -55933,6 +55933,7 @@
 	patches.suse/drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 	patches.suse/drm-msm-dsi-phy-Toggle-back-buffer-resync-after-prep.patch
 	patches.suse/drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-rate.patch
+	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
