--- a/series.conf
+++ b/series.conf
@@ -55977,6 +55977,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mac80211-Fix-6-GHz-Band-capabilities-element-ad.patch
+	patches.suse/wifi-mac80211-Fix-HE-capabilities-element-check.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/dpll-zl3073x-Add-functions-to-access-hardware-regist.patch
 	patches.suse/dpll-zl3073x-Add-low-level-flash-functions.patch
