drm/amdgpu: add support for cyan skillfish gpu_info (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55927,6 +55927,7 @@
 	patches.suse/drm-amdgpu-mes12-implement-detect-and-reset-callback.patch
 	patches.suse/drm-amdgpu-add-ip-offset-support-for-cyan-skillfish.patch
 	patches.suse/drm-amdgpu-add-support-for-cyan-skillfish-without-IP.patch
+	patches.suse/drm-amdgpu-add-support-for-cyan-skillfish-gpu_info.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
