--- a/series.conf
+++ b/series.conf
@@ -55811,6 +55811,7 @@
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/video-backlight-lp855x_bl-Set-correct-EPROM-start-fo.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
