--- a/series.conf
+++ b/series.conf
@@ -55939,6 +55939,7 @@
 	patches.suse/drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 	patches.suse/drm-xe-guc-Set-upper-limit-of-H2G-retries-over-CTB.patch
 	patches.suse/drm-xe-guc-Return-an-error-code-if-the-GuC-load-fail.patch
+	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
