drm/amdgpu: reject gang submissions under SRIOV (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55948,6 +55948,7 @@
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.suse/drm-amd-display-dml2-Guard-dml21_map_dc_state_into_d.patch
 	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
+	patches.suse/drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
