drm/amd/display: Set up pixel encoding for YCBCR422 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55942,6 +55942,7 @@
 	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amd-display-fix-dml-ms-order-of-operations.patch
+	patches.suse/drm-amd-display-Set-up-pixel-encoding-for-YCBCR422.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
