drm/amd/display: incorrect conditions for failing dto calculations (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55907,6 +55907,7 @@
 	patches.suse/drm-amd-display-Support-HW-cursor-180-rot-for-any-nu.patch
 	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-amd-display-Increase-minimum-clock-for-TMDS-420-.patch
+	patches.suse/drm-amd-display-incorrect-conditions-for-failing-dto.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
