--- a/series.conf
+++ b/series.conf
@@ -56148,6 +56148,7 @@
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
 	patches.suse/fbdev-simplefb-Fix-use-after-free-in-simplefb_detach.patch
+	patches.suse/fbdev-Add-bounds-checking-in-bit_putcs-to-fix-vmallo.patch
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
