drm/amdgpu/atom: Check kcalloc() for WS buffer in amdgpu_atom_execute_table_locked() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55950,6 +55950,7 @@
 	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
 	patches.suse/drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
+	patches.suse/drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-in-amdgp.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
