--- a/series.conf
+++ b/series.conf
@@ -56281,6 +56281,7 @@
 	patches.suse/drm-sysfb-Do-not-dereference-NULL-pointer-in-plane-r.patch
 	patches.suse/drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
+	patches.suse/drm-sched-avoid-killing-parent-entity-on-child-SIGKI.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 	patches.suse/drm-ast-Clear-preserved-bits-from-register-output-va.patch
