--- a/series.conf
+++ b/series.conf
@@ -55994,6 +55994,7 @@
 	patches.suse/wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu_sta_k.patch
 	patches.suse/wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
+	patches.suse/wifi-rtw88-sdio-use-indirect-IO-for-device-registers.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
