--- a/series.conf
+++ b/series.conf
@@ -35008,6 +35008,7 @@
 	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
 	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
 	patches.suse/Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DEV-addre.patch
+	patches.suse/Bluetooth-L2CAP-export-l2cap_chan_hold-for-modules.patch
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/wifi-mac80211-reject-address-change-while-connecting.patch
