--- a/series.conf
+++ b/series.conf
@@ -12563,6 +12563,7 @@
 	patches.suse/ext4-fix-an-off-by-one-issue-during-moving-extents.patch
 	patches.suse/ext4-avoid-potential-buffer-over-read-in-parse_apply.patch
 	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
+	patches.suse/exfat-limit-log-print-for-IO-error.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
