--- a/series.conf
+++ b/series.conf
@@ -12564,6 +12564,7 @@
 	patches.suse/ext4-avoid-potential-buffer-over-read-in-parse_apply.patch
 	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
 	patches.suse/exfat-limit-log-print-for-IO-error.patch
+	patches.suse/exfat-validate-cluster-allocation-bits-of-the-allocation-bitmap.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
