erofs: avoid infinite loop due to incomplete zstd-compressed data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12978,6 +12978,7 @@
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
 	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
+	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
