Bluetooth: 6lowpan: reset link-local header on ipv6 recv path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13019,6 +13019,7 @@
 	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
 	patches.suse/Bluetooth-MGMT-cancel-mesh-send-timer-when-hdev-remo.patch
 	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
+	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
