--- a/series.conf
+++ b/series.conf
@@ -12943,6 +12943,7 @@
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 	patches.suse/ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
+	patches.suse/ACPI-fan-Use-platform-device-for-devres-related-acti.patch
 	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
