bus: mhi: core: Improve mhi_sync_power_up handling for SYS_ERR state (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12700,6 +12700,7 @@
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/bus-mhi-ep-Fix-chained-transfer-handling-in-read-pat.patch
+	patches.suse/bus-mhi-core-Improve-mhi_sync_power_up-handling-for-.patch
 	patches.suse/coresight-trbe-Return-NULL-pointer-for-allocation-failures.patch
 	patches.suse/coresight-Fix-incorrect-handling-for-return-value-of.patch
 	patches.suse/phy-cdns-dphy-Store-hs_clk_rate-and-return-it.patch
