--- a/series.conf
+++ b/series.conf
@@ -13026,6 +13026,7 @@
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/ACPI-CPPC-Detect-preferred-core-availability-on-onli.patch
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
+	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
