ACPI: sysfs: Use ACPI_FREE() for freeing an ACPI object (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12419,6 +12419,7 @@
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ignore_dep.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
+	patches.suse/ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-object.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
 	patches.suse/ACPI-property-Add-code-comments-explaining-what-is-g.patch
