ACPI: fan: Add fan speed reporting for fans with only _FST (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6921,6 +6921,7 @@
 	patches.suse/msft-hv-3227-x86-hyperv-Add-comments-about-hv_vpset-and-var-size-.patch
 	patches.suse/msft-hv-3228-x86-hyperv-fix-an-indentation-issue-in-mshyperv.h.patch
 	patches.suse/PNP-Expand-length-of-fixup-id-string.patch
+	patches.suse/ACPI-fan-Add-fan-speed-reporting-for-fans-with-only-.patch
 	patches.suse/ACPI-thermal-Fix-stale-comment-regarding-trip-points.patch
 	patches.suse/ACPI-platform-profile-Fix-CFI-violation-when-accessing-sysfs-files.patch
 	patches.suse/ACPI-HED-Always-initialize-before-evged.patch
