--- a/series.conf
+++ b/series.conf
@@ -12807,6 +12807,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
+	patches.suse/ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polarity.patch
 	patches.suse/of-unittest-Fix-device-reference-count-leak-in-of_un.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
