--- a/series.conf
+++ b/series.conf
@@ -12467,6 +12467,7 @@
 	patches.suse/ASoC-qcom-sc8280xp-explicitly-set-S16LE-format-in-sc.patch
 	patches.suse/ALSA-usb-audio-add-mono-main-switch-to-Presonus-S182.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
+	patches.suse/ASoC-stm32-sai-manage-context-in-set_sysclk-callback.patch
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
