--- a/series.conf
+++ b/series.conf
@@ -13020,6 +13020,7 @@
 	patches.suse/Bluetooth-MGMT-cancel-mesh-send-timer-when-hdev-remo.patch
 	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
 	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
+	patches.suse/Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DEV-addre.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
