char: misc: restrict the dynamic range to exclude reserved minors (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10176,6 +10176,7 @@
 	patches.suse/sysfb-Fix-screen_info-type-check-for-VGA.patch
 	patches.suse/misc-tps6594-pfsm-Add-NULL-pointer-check-in-tps6594_.patch
 	patches.suse/msft-hv-3247-uio_hv_generic-Set-event-for-all-channels-on-the-dev.patch
+	patches.suse/char-misc-restrict-the-dynamic-range-to-exclude-rese.patch
 	patches.suse/fpga-fix-potential-null-pointer-deref-in-fpga_mgr_te.patch
 	patches.suse/bus-mhi-ep-Update-read-pointer-only-after-buffer-is-.patch
 	patches.suse/bus-mhi-host-Fix-conflict-between-power_up-and-SYSER.patch
