ACPI: CPPC: Detect preferred core availability on online CPUs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13024,6 +13024,7 @@
 	patches.suse/Bluetooth-L2CAP-export-l2cap_chan_hold-for-modules.patch
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
+	patches.suse/ACPI-CPPC-Detect-preferred-core-availability-on-onli.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
