--- a/series.conf
+++ b/series.conf
@@ -12465,6 +12465,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-qcom-sc8280xp-explicitly-set-S16LE-format-in-sc.patch
+	patches.suse/ALSA-usb-audio-add-mono-main-switch-to-Presonus-S182.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
