--- a/series.conf
+++ b/series.conf
@@ -13025,6 +13025,7 @@
 	patches.suse/Bluetooth-6lowpan-Don-t-hold-spin-lock-over-sleeping.patch
 	patches.suse/Bluetooth-6lowpan-add-missing-l2cap_chan_lock.patch
 	patches.suse/ACPI-CPPC-Detect-preferred-core-availability-on-onli.patch
+	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
