ACPI: resource: Skip IRQ override on ASUS Vivobook Pro N6506CU (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12424,6 +12424,7 @@
 	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
 	patches.suse/ACPI-property-Add-code-comments-explaining-what-is-g.patch
 	patches.suse/ACPI-property-Do-not-pass-NULL-handles-to-acpi_attac.patch
+	patches.suse/ACPI-resource-Skip-IRQ-override-on-ASUS-Vivobook-Pro.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
