accel/habanalabs: support mapping cb with vmalloc-backed coherent memory (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12505,6 +12505,7 @@
 	patches.suse/drm-amd-Only-restore-cached-manual-clock-settings-in.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
+	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
