ASoC: SOF: ipc4-pcm: Add fixup for channels (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12459,6 +12459,7 @@
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-jacks.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
+	patches.suse/ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
