Bluetooth: SCO: Fix UAF on sco_conn_free (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12566,6 +12566,7 @@
 	patches.suse/Bluetooth-btusb-Check-for-unexpected-bytes-when-defr.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-MT7922.patch
 	patches.suse/Bluetooth-bcsp-receive-data-only-if-registered.patch
+	patches.suse/Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
