ALSA: usb-audio: don't log messages meant for 1810c when initializing 1824c (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12946,6 +12946,7 @@
 	patches.suse/ACPI-fan-Use-platform-device-for-devres-related-acti.patch
 	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
+	patches.suse/ALSA-usb-audio-don-t-log-messages-meant-for-1810c-wh.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.suse/ASoC-mediatek-Fix-double-pm_runtime_disable-in-remov.patch
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
