ACPI: PRM: Skip handlers with NULL handler_address or NULL VA (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12428,6 +12428,7 @@
 	patches.suse/ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 	patches.suse/ACPI-video-force-native-for-Lenovo-82K8.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
+	patches.suse/ACPI-PRM-Skip-handlers-with-NULL-handler_address-or-.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-USB-port-assignment.patch
