crypto: hisilicon/qm - invalidate queues in use (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12665,6 +12665,7 @@
 	patches.suse/crypto-ccp-Fix-incorrect-payload-size-calculation-in.patch
 	patches.suse/crypto-caam-double-the-entropy-delay-interval-for-re.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
+	patches.suse/crypto-hisilicon-qm-invalidate-queues-in-use.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
