crypto: caam - double the entropy delay interval for retry (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12663,6 +12663,7 @@
 	patches.suse/crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-ccp-Fix-incorrect-payload-size-calculation-in.patch
+	patches.suse/crypto-caam-double-the-entropy-delay-interval-for-re.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
